--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32doit-devkit-v1]
+[env:MAIN]
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
@@ -16,5 +16,41 @@ monitor_speed = 115200
 lib_deps = 
 	# adafruit/Adafruit GFX Library@^1.11.9
 	# olikraus/U8g2@^2.35.19
-	# adafruit/Adafruit SSD1306@^2.5.10
+	# \adafruit/Adafruit SSD1306@^2.5.10
     ESP_VS1053_Library
+
+[env:VS1053]
+platform = espressif32
+board = esp32doit-devkit-v1
+framework = arduino
+monitor_speed = 115200
+build_src_filter = +<*> -<.git/> -<.svn/> -<MAIN> -<EXAMPLE/BT> -<EXAMPLE/LED> -<EXAMPLE/DISPLAY>
+lib_deps = 
+    ESP_VS1053_Library
+
+[env:BT]
+platform = espressif32
+board = esp32doit-devkit-v1
+framework = arduino
+monitor_speed = 115200
+build_src_filter = +<*> -<.git/> -<.svn/> -<MAIN> -<EXAMPLE/VS1053> -<EXAMPLE/LED> -<EXAMPLE/DISPLAY>
+
+[env:LED]
+platform = espressif32
+board = esp32doit-devkit-v1
+framework = arduino
+monitor_speed = 115200
+build_src_filter = +<*> -<.git/> -<.svn/> -<MAIN> -<EXAMPLE/VS1053> -<EXAMPLE/BT> -<EXAMPLE/DISPLAY>
+lib_deps = 
+	adafruit/Adafruit NeoPixel@^1.10.6
+
+[env:DISPLAY]
+platform = espressif32
+board = esp32doit-devkit-v1
+framework = arduino
+monitor_speed = 115200
+build_src_filter = +<*> -<.git/> -<.svn/> -<MAIN> -<EXAMPLE/VS1053> -<EXAMPLE/BT> -<EXAMPLE/LED>
+lib_deps =
+	adafruit/Adafruit GFX Library@^1.11.9
+	# olikraus/U8g2@^2.35.19
+	adafruit/Adafruit SSD1306@^2.5.10
