[chore: adding kerboard test enviroment]

--- a/platformio.ini
+++ b/platformio.ini
@@ -24,7 +24,7 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
-build_src_filter = +<*> -<.git/> -<.svn/> -<MAIN> -<EXAMPLE/BT> -<EXAMPLE/LED> -<EXAMPLE/DISPLAY>
+build_src_filter = +<*> -<.git/> -<.svn/> -<MAIN> -<EXAMPLE/BT> -<EXAMPLE/LED> -<EXAMPLE/DISPLAY> -<EXAMPLE/KEYBOARD>
 lib_deps = 
     ESP_VS1053_Library
 
@@ -33,14 +33,14 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
-build_src_filter = +<*> -<.git/> -<.svn/> -<MAIN> -<EXAMPLE/VS1053> -<EXAMPLE/LED> -<EXAMPLE/DISPLAY>
+build_src_filter = +<*> -<.git/> -<.svn/> -<MAIN> -<EXAMPLE/VS1053> -<EXAMPLE/LED> -<EXAMPLE/DISPLAY> -<EXAMPLE/KEYBOARD>
 
 [env:LED]
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
-build_src_filter = +<*> -<.git/> -<.svn/> -<MAIN> -<EXAMPLE/VS1053> -<EXAMPLE/BT> -<EXAMPLE/DISPLAY>
+build_src_filter = +<*> -<.git/> -<.svn/> -<MAIN> -<EXAMPLE/VS1053> -<EXAMPLE/BT> -<EXAMPLE/DISPLAY> -<EXAMPLE/KEYBOARD>
 lib_deps = 
 	adafruit/Adafruit NeoPixel@^1.10.6
 
@@ -49,8 +49,15 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
-build_src_filter = +<*> -<.git/> -<.svn/> -<MAIN> -<EXAMPLE/VS1053> -<EXAMPLE/BT> -<EXAMPLE/LED>
+build_src_filter = +<*> -<.git/> -<.svn/> -<MAIN> -<EXAMPLE/VS1053> -<EXAMPLE/BT> -<EXAMPLE/LED> -<EXAMPLE/KEYBOARD>
 lib_deps =
 	adafruit/Adafruit GFX Library@^1.11.9
 	# olikraus/U8g2@^2.35.19
 	adafruit/Adafruit SSD1306@^2.5.10
+
+[env:KEYBOARD]
+platform = espressif32
+board = esp32doit-devkit-v1
+framework = arduino
+monitor_speed = 115200
+build_src_filter = +<*> -<.git/> -<.svn/> -<MAIN> -<EXAMPLE/VS1053> -<EXAMPLE/BT> -<EXAMPLE/LED> -<EXAMPLE/DISPLAY>
