--- a/platformio.ini
+++ b/platformio.ini
@@ -24,7 +24,7 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
-build_src_filter = +<*> -<.git/> -<.svn/> -<MAIN> -<EXAMPLE/BT> -<EXAMPLE/LED> -<EXAMPLE/DISPLAY> -<EXAMPLE/KEYBOARD>
+build_src_filter = +<*> -<.git/> -<.svn/> -<MAIN> -<EXAMPLE/BT> -<EXAMPLE/LED> -<EXAMPLE/DISPLAY> -<EXAMPLE/KEYBOARD> -<EXAMPLE/BLINK>
 lib_deps = 
     https://github.com/pschatzmann/arduino-vs1053/
 
@@ -33,14 +33,14 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
-build_src_filter = +<*> -<.git/> -<.svn/> -<MAIN> -<EXAMPLE/VS1053> -<EXAMPLE/LED> -<EXAMPLE/DISPLAY> -<EXAMPLE/KEYBOARD>
+build_src_filter = +<*> -<.git/> -<.svn/> -<MAIN> -<EXAMPLE/VS1053> -<EXAMPLE/LED> -<EXAMPLE/DISPLAY> -<EXAMPLE/KEYBOARD> -<EXAMPLE/BLINK>
 
 [env:LED]
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
-build_src_filter = +<*> -<.git/> -<.svn/> -<MAIN> -<EXAMPLE/VS1053> -<EXAMPLE/BT> -<EXAMPLE/DISPLAY> -<EXAMPLE/KEYBOARD>
+build_src_filter = +<*> -<.git/> -<.svn/> -<MAIN> -<EXAMPLE/VS1053> -<EXAMPLE/BT> -<EXAMPLE/DISPLAY> -<EXAMPLE/KEYBOARD> -<EXAMPLE/BLINK>
 lib_deps = 
 	adafruit/Adafruit NeoPixel@^1.10.6
 
@@ -49,7 +49,7 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
-build_src_filter = +<*> -<.git/> -<.svn/> -<MAIN> -<EXAMPLE/VS1053> -<EXAMPLE/BT> -<EXAMPLE/LED> -<EXAMPLE/KEYBOARD>
+build_src_filter = +<*> -<.git/> -<.svn/> -<MAIN> -<EXAMPLE/VS1053> -<EXAMPLE/BT> -<EXAMPLE/LED> -<EXAMPLE/KEYBOARD> -<EXAMPLE/BLINK>
 lib_deps =
 	adafruit/Adafruit GFX Library@^1.11.9
 	# olikraus/U8g2@^2.35.19
@@ -60,4 +60,11 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
-build_src_filter = +<*> -<.git/> -<.svn/> -<MAIN> -<EXAMPLE/VS1053> -<EXAMPLE/BT> -<EXAMPLE/LED> -<EXAMPLE/DISPLAY>
+build_src_filter = +<*> -<.git/> -<.svn/> -<MAIN> -<EXAMPLE/VS1053> -<EXAMPLE/BT> -<EXAMPLE/LED> -<EXAMPLE/DISPLAY> -<EXAMPLE/BLINK>
+
+[env:BLINK]
+platform = espressif32
+board = esp32doit-devkit-v1
+framework = arduino
+monitor_speed = 115200
+build_src_filter = +<*> -<.git/> -<.svn/> -<MAIN> -<EXAMPLE/VS1053> -<EXAMPLE/BT> -<EXAMPLE/LED> -<EXAMPLE/DISPLAY> -<EXAMPLE/KEYBOARD>
