--- a/platformio.ini
+++ b/platformio.ini
@@ -13,10 +13,12 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
+build_src_filter = +<*> -<.git/> -<.svn/> -<EXAMPLE/VS1053> -<EXAMPLE/BT> -<EXAMPLE/LED> -<EXAMPLE/DISPLAY> -<EXAMPLE/KEYBOARD> -<EXAMPLE/BLINK>
 lib_deps = 
 	# adafruit/Adafruit GFX Library@^1.11.9
 	# olikraus/U8g2@^2.35.19
 	# \adafruit/Adafruit SSD1306@^2.5.10
+	adafruit/Adafruit NeoPixel@^1.10.6
     https://github.com/pschatzmann/arduino-vs1053/
 
 [env:VS1053]
